fix: 修复 release APK 签名配置问题
- 改进 keystore 文件路径解析逻辑，支持多种路径格式
- 添加签名配置调试日志输出
- 添加 workflow 调试步骤验证签名配置
- 更新构建进度文档